[package]
version = "0.1.0"
name = "quiz-seed"
repository = "https://git.sr.ht/~azzamsa/quiz-seed"
authors = ["azzamsa <me@azzamsa.com>"]
description = "Simple quiz app 🎲. Built with Seed."
categories = ["quiz", "boilerplate"]
keywords = ["quiz", "boilerplate", "seed"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
